<resources>
    <string name="app_name">Định vị hình ảnh</string>
    <string name="abc_action_bar_home_description">Điều hướng về trang chủ</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Điều hướng lên trên</string>
    <string name="abc_action_menu_overflow_description">Thêm tùy chọn</string>
    <string name="abc_action_mode_done">Xong</string>
    <string name="abc_activity_chooser_view_see_all">Xem tất cả</string>
    <string name="abc_activitychooserview_choose_application">Chọn một ứng dụng</string>
    <string name="abc_capital_off">TẮT</string>
    <string name="abc_capital_on">BẬT</string>
    <string name="abc_search_hint">Tìm kiếm…</string>
    <string name="abc_searchview_description_clear">Xóa truy vấn</string>
    <string name="abc_searchview_description_query">Tìm kiếm truy vấn</string>
    <string name="abc_searchview_description_search">Tìm kiếm</string>
    <string name="abc_searchview_description_submit">Gửi truy vấn</string>
    <string name="abc_searchview_description_voice">Tìm kiếm bằng giọng nói</string>
    <string name="abc_shareactionprovider_share_with">Chia sẻ với</string>
    <string name="abc_shareactionprovider_share_with_application">Chia sẻ với %s</string>
    <string name="abc_toolbar_collapse_description">Thu gọn</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="cancel_label">Hủy</string>
    <string name="confirm_label">Xác nhận</string>
    <string name="create_folder_error">Không thể tạo thư mục</string>
    <string name="create_folder_error_already_exists">Thư mục đã tồn tại</string>
    <string name="create_folder_error_no_write_access">Không thể ghi vào thư mục này</string>
    <string name="create_folder_label">Tạo thư mục</string>
    <string name="create_folder_msg">Tạo thư mục mới với tên %1$s?</string>
    <string name="create_folder_success">Đã tạo thư mục mới</string>
    <string name="selected_folder_label">Thư mục đã chọn:</string>
    <string name="up_label">Lên</string>
    <string name="alert_cannot_connect_internet">Không có kết nối Internet</string>
    <string name="alert_folder_can_not_access">Không thể sử dụng thư mục này</string>
    <string name="alert_gps_enable">Chưa mở GPS</string>
    <string name="alert_gps_message">Chưa cài đặt GPS! Bạn có muốn cài đặt GPS không?</string>
    <string name="alert_gps_title">CÀI ĐẶT GPS</string>
    <string name="alert_internet_enable">Chưa mở Wifi/3G</string>
    <string name="alert_network_message">Chưa cài đặt Internet! Bạn có muốn cài đặt Internet không?</string>
    <string name="alert_network_title">CÀI ĐẶT INTERNET</string>
    <string name="alert_save">Đã lưu thiết lập</string>
    <string name="alertdialog_cancel">Hủy</string>
    <string name="alertdialog_settings">Cài đặt</string>
    <string name="key">AIzaSyAw2hWh48ON4hVCCjJR75dASC7dINR0KcU</string>
    <string name="new_directory_name">Thư mục</string>
    <string name="noti_content_text">Định vị hình ảnh đang hoạt động</string>
    <string name="noti_content_title">Định vị hình ảnh</string>
    <string name="noti_status_text">Đã mở định vị hình ảnh</string>
    <string name="text_btn_save">Lưu</string>
    <string name="text_gps_image_close">Định vị tắt</string>
    <string name="text_gps_image_open">Định vị mở</string>
    <string name="text_image_location_info">Kinh Độ: %1$s %2$s Vĩ Độ: %3$s %4$s Giờ: %5$s Ngày: %6$s</string>
    <string name="title_activity_main">Định vị hình ảnh</string>
    <string name="title_activity_settings">Thiết lập</string>
    <string name="title_btn_start">Mở</string>
    <string name="title_btn_stop">Tắt</string>
    <string name="title_image_setting">THIẾT LẬP HÌNH ẢNH</string>
    <string name="title_image_size">Chất lượng ảnh</string>
    <string name="title_input_path">Thư mục nhận ảnh</string>
    <string name="title_map_setting">THIẾT LẬP BẢN ĐỒ</string>
    <string name="title_map_width">Chiều rộng bản đồ</string>
    <string name="title_map_zoom">Độ phóng to bản đồ</string>
    <string name="title_output_path">Thư mục xuất ảnh</string>
    <string name="title_unit_name">Thông tin đơn vị</string>
</resources>
