<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/footer"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnConfirm"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/confirm_label" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/cancel_label" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/directoryInfo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:gravity="center">

        <ImageButton
            android:id="@+id/btnNavUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/borderless_button"
            android:contentDescription="@string/up_label"
            android:src="@drawable/navigation_up" />

        <TextView
            android:id="@+id/txtvSelectedFolderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@+id/btnNavUp"
            android:text="@string/selected_folder_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtvSelectedFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtvSelectedFolderLabel"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_toLeftOf="@+id/btnCreateFolder"
            android:layout_toRightOf="@+id/btnNavUp"
            android:ellipsize="start"
            android:scrollHorizontally="true"
            android:singleLine="true" />

        <ImageButton
            android:id="@+id/btnCreateFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/borderless_button"
            android:contentDescription="@string/create_folder_label"
            android:src="@drawable/ic_action_create" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnNavUp"
            android:background="@color/bright_blue" />
    </RelativeLayout>

    <ListView
        android:id="@+id/directoryList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/directoryInfo" />
</RelativeLayout>
