<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_image_setting"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/textColorPrimary"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#b6b6b6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill"
                android:src="@mipmap/ic_folder_white_48dp"
                android:tint="@color/textColorSecondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:text="@string/title_input_path"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textColorSecondary" />

                <EditText
                    android:id="@+id/etInputFolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:ellipsize="start"
                    android:focusableInTouchMode="false"
                    android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone"
                    android:singleLine="true" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill"
                android:src="@mipmap/ic_folder_white_48dp"
                android:tint="@color/textColorSecondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_output_path"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textColorSecondary" />

                <EditText
                    android:id="@+id/etOutputFolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:ellipsize="start"
                    android:focusableInTouchMode="false"
                    android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone"
                    android:singleLine="true" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill"
                android:src="@mipmap/ic_create_white_48dp"
                android:tint="@color/textColorSecondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_unit_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textColorSecondary" />

                <EditText
                    android:id="@+id/etUnitName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionGo|actionSearch|actionSend|actionNext|actionDone|actionPrevious"
                    android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone"
                    android:singleLine="true" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill"
                android:src="@mipmap/ic_image_white_48dp"
                android:tint="@color/textColorSecondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_image_size"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textColorSecondary" />

                <SeekBar
                    android:id="@+id/sbImageQuality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="false"
                    android:max="100" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill"
                android:text="@string/title_map_setting"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/textColorPrimary"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#b6b6b6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill"
                android:src="@mipmap/ic_space_bar_black_48dp"
                android:tint="@color/textColorSecondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_map_width"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textColorSecondary" />

                <SeekBar
                    android:id="@+id/sbMapWidth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="false"
                    android:max="540" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_zoom_out_map_white_48dp"
                android:tint="@color/textColorSecondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_map_zoom"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textColorSecondary" />

                <SeekBar
                    android:id="@+id/sbMapZoom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="false"
                    android:max="19" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/ivMap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/map_border" />
    </LinearLayout>
</ScrollView>
